// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login matches snapshot displaying default text 1`] = `
<div class="wkp-login"
     role="button"
     tabindex="0"
>
  <svg focusable="false"
       class="wkp-login-icon"
  >
    user_92_large.svg
  </svg>
  <span class="wkp-login-text">
    Anmelden
  </span>
</div>
`;

exports[`Login matches snapshot displaying user name 1`] = `
<div class="wkp-login"
     role="button"
     tabindex="0"
     title="bar"
>
  <svg focusable="false"
       class="wkp-login-icon"
  >
    user_92_large.svg
  </svg>
  <span class="wkp-login-text">
    bar
  </span>
</div>
`;
